Cleanup and picture upload testing

--- a/TodoWebApp/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/TodoWebApp/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,5 +1,5 @@
 @using Todo.WebApp.Areas.HelpPage
-@model InvalidSample
+@model Todo.WebApp.Areas.HelpPage.SampleGeneration.InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
