--- a/TodoWebApp/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/TodoWebApp/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,5 +1,5 @@
 @using Todo.WebApp.Areas.HelpPage
-@model TextSample
+@model Todo.WebApp.Areas.HelpPage.SampleGeneration.TextSample
 
 <pre class="wrapped">
 @Model.Text
