--- a/TodoWebApp/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/TodoWebApp/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,4 @@
 @using Todo.WebApp.Areas.HelpPage
-@model ImageSample
+@model Todo.WebApp.Areas.HelpPage.SampleGeneration.ImageSample
 
 <img src="@Model.Src" />
