--- a/TodoWebApp/www/styles/app.css
+++ b/TodoWebApp/www/styles/app.css
@@ -2,6 +2,64 @@
     -webkit-transform: translateZ(0);
 }
 
+#preLoad {
+    width: 100%;
+    height: 100%;
+    background: #FFF;
+    position: absolute;
+    top: 0;
+    -moz-transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
+    -webkit-transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
+    -o-transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
+    transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
+}
+
+    #preLoad div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 60px;
+        margin-top: -30px;
+        margin-left: -24px;
+    }
+
+.km-android .km-view .km-content {
+    background-color: rgb(229, 229, 229);
+    color: rgb(51, 51, 51);
+}
+
+    .km-android .km-view .km-content .km-listgroupinset .km-group-title .km-text {
+        color: rgb(51, 51, 51);
+    }
+
+.km-android .km-view .km-tabstrip .km-button {
+    background-color: rgb(204, 204, 204);
+}
+
+.km-android .km-view .km-navbar {
+    background-color: rgb(204, 204, 204);
+}
+
+    .km-android .km-view .km-navbar .km-button .km-text {
+        color: rgb(51, 51, 51);
+    }
+
+.km-android .km-listview .km-list {
+    border-top-color: rgb(153, 153, 153);
+}
+
+.km-android .km-view .km-content .km-list > li {
+    border-color: rgb(153, 153, 153);
+}
+
+.km-android .km-view .km-content .km-listgroup .km-group-title .km-text {
+    color: #333;
+}
+
+.km-android .km-view .km-content .km-list > li .km-switch .km-switch-container {
+    background-color: #b2b2b2;
+}
+
 #map .km-content,
 #map .km-scroll-container,
 #map #mapCanvas {
@@ -9,7 +67,7 @@
     width: 100%;
 }
 
-idpList {
+#idps {
     display: block;
     text-align: center;
     margin: .6em .8em 0;
