--- a/Todo.Apps/Android/res/xml/config.xml
+++ b/Todo.Apps/Android/res/xml/config.xml
@@ -40,6 +40,7 @@
     <preference name="exit-on-suspend" value="false" />
 
 	<plugins>
+		<plugin name="ChildBrowser" value="com.phonegap.plugins.childBrowser.ChildBrowser"/>
 	    <plugin name="App" value="org.apache.cordova.App"/>
 	    <plugin name="Geolocation" value="org.apache.cordova.GeoBroker"/>
 	    <plugin name="Device" value="org.apache.cordova.Device"/>
