--- a/TodoWebApp/www/styles/app.css
+++ b/TodoWebApp/www/styles/app.css
@@ -8,6 +8,7 @@
     background: #FFF;
     position: absolute;
     top: 0;
+    z-index: 9999;
     -moz-transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
     -webkit-transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
     -o-transition: visibility 0s linear 1s, opacity 1s ease-in-out 0s;
