--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -63,14 +63,12 @@
     <script src="../js/viewmodels/acsViewModel.js" type="text/javascript"></script>
     <script src="../js/viewmodels/settingsViewModel.js" type="text/javascript"></script>
 </head>
-    <body>
-        <!--   
+    <body> 
         <div id="preLoad">
             <div>
-                <img src="../images/loading-image.gif" alt="Loading Image" style="width:48px;" />
-                <br />Loading...
+                <img src="../images/loading-image.gif" alt="Loading Image" style="width:65%;" />
             </div>
-        </div>-->
+        </div>
 
         <!-- Start page -->
         <div id="startPage" data-role="view" data-title="tUdUs" data-model="startViewModel" data-layout="defaultLayout">
