Adding back Google Maps

--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -43,8 +43,8 @@
 	<script src="../js/libs/signalr.hubs.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
 	
-    <!--  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
-	-->
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
+
 	<script src="../js/namespaces.js" type="text/javascript"></script>
     <script src="../js/tools/helpers.js" type="text/javascript"></script>
     <script src="../js/tools/templateLoader.js" type="text/javascript"></script>
