--- a/TodoWebApp/www/templates/idpList.tmpl.html
+++ b/TodoWebApp/www/templates/idpList.tmpl.html
@@ -1,4 +1,4 @@
-<script type="text/x-kendo-template" id="idpListTemplate">
+<script id="idpListTemplate" type="text/x-kendo-template">
     <img src="${imageUrl}" style="border: 50px; width: 60px" align="middle"/>
     <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
 </script>
