Fixed OAuth on client

--- a/TodoWebApp/www/views/settings.html
+++ b/TodoWebApp/www/views/settings.html
@@ -19,6 +19,7 @@
 	            <select data-bind="value: authenticationMode">
 	                <option value="Basic">Basic</option>
 	                <option value="ACS">ACS</option>
+                    <option value="IdSrv">IdSrv</option>
 	            </select>
 	            Authentication
 	        </li>
