--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -57,6 +57,7 @@
     <script src="../js/services/pictureservice.js" type="text/javascript"></script>
     <script src="../js/viewmodels/startViewModel.js" type="text/javascript"></script>
 	<script src="../js/viewmodels/authenticationViewModel.js" type="text/javascript"></script>
+    <script src="../js/viewmodels/oauth2ViewModel.js" type="text/javascript"></script>
 	<script src="../js/viewmodels/todosViewModel.js" type="text/javascript"></script>
 	<script src="../js/viewmodels/newTodoItemViewModel.js" type="text/javascript"></script>
 	<script src="../js/viewmodels/errorViewModel.js" type="text/javascript"></script>
