--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -19,14 +19,14 @@
     <script src="../js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
     
     <script>
-    if (navigator.userAgent.toLowerCase().match(/android/)) {
-        document.write('<script charset="utf-8" src="../js/libs/cordova-android.js"><\/script>');
-    }
-    else if (navigator.userAgent.toLowerCase().match(/iphone/) || navigator.userAgent.toLowerCase().match(/ipad/)) {
-        document.write('<script charset="utf-8" src="../js/libs/cordova-ios.js"><\/script>');
-    } else {
-        document.write('<script charset="utf-8" src="../js/libs/cordova.js"><\/script>');
-    }
+        if (navigator.userAgent.toLowerCase().match(/android/)) {
+            document.write('<script charset="utf-8" src="../js/libs/cordova-android.js"><\/script>');
+        }
+        else if (navigator.userAgent.toLowerCase().match(/iphone/) || navigator.userAgent.toLowerCase().match(/ipad/)) {
+            document.write('<script charset="utf-8" src="../js/libs/cordova-ios.js"><\/script>');
+        } else {
+            document.write('<script charset="utf-8" src="../js/libs/cordova.js"><\/script>');
+        }
     </script>
 
     <script src="../js/libs/childbrowser.js" type="text/javascript"></script>
@@ -38,11 +38,11 @@
     <script src="../js/libs/kendo.mobile.min.js" type="text/javascript"></script>    
 	<script src="../js/libs/amplify.min.js" type="text/javascript"></script>
 	<script src="../js/libs/notifier.min.js" type="text/javascript"></script>
-	<script src="../js/libs/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
+	<script src="../js/libs/jquery.signalR-1.0.0-alpha1.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery.ba-bbq.min.js" type="text/javascript"></script>
-	<script src="../js/libs/signalr.hubs.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
-	
+
+	<script src="../../signalr/hubs" type="text/javascript"></script>	
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
 
 	<script src="../js/namespaces.js" type="text/javascript"></script>
@@ -62,7 +62,13 @@
 	<script src="../js/viewmodels/newTodoItemViewModel.js" type="text/javascript"></script>
 	<script src="../js/viewmodels/errorViewModel.js" type="text/javascript"></script>
     <script src="../js/viewmodels/acsViewModel.js" type="text/javascript"></script>
-    <script src="../js/viewmodels/settingsViewModel.js" type="text/javascript"></script>
+	<script src="../js/viewmodels/settingsViewModel.js" type="text/javascript"></script>
+    
+	<script>
+	    function oAuthCallback(params) {
+	        oauth2ViewModel.authCallback(params);
+	    }
+	</script>
 </head>
     <body> 
         <div id="preLoad">
