Added SignalR hubs file statically

--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -42,7 +42,6 @@
     <script src="../js/libs/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
 
-	<script src="../../signalr/hubs" type="text/javascript"></script>	
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
 
 	<script src="../js/namespaces.js" type="text/javascript"></script>
@@ -52,6 +51,7 @@
     <script src="../js/applicationConstants.js" type="text/javascript"></script>
 	<script src="../js/views.js" type="text/javascript"></script>
     <script src="../js/services/httpConstants.js" type="text/javascript"></script>    
+    <script src="../js/services/signalr.hubs.js" type="text/javascript"></script>	
     <script src="../js/services/notificationservice.js" type="text/javascript"></script>
 	<script src="../js/services/dataservices.js" type="text/javascript"></script>
     <script src="../js/services/pictureservice.js" type="text/javascript"></script>
