--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -17,7 +17,7 @@
 
 	<script src="../js/libs/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
-    
+    <script src="../js/libs/log4javascript.js" type="text/javascript"></script>
     <script>
         if (navigator.userAgent.toLowerCase().match(/android/)) {
             document.write('<script charset="utf-8" src="../js/libs/cordova-android.js"><\/script>');
@@ -45,11 +45,13 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
 
 	<script src="../js/namespaces.js" type="text/javascript"></script>
-    <script src="../js/tools/helpers.js" type="text/javascript"></script>
-    <script src="../js/tools/templateLoader.js" type="text/javascript"></script>
-	<script src="../js/app.js" type="text/javascript"></script>
     <script src="../js/applicationConstants.js" type="text/javascript"></script>
-	<script src="../js/views.js" type="text/javascript"></script>
+	<script src="../js/tools/helpers.js" type="text/javascript"></script>
+    <script src="../js/tools/templateLoader.js" type="text/javascript"></script>
+	<script src="../js/tools/jsonAppender.js" type="text/javascript"></script>
+    <script src="../js/tools/logger.js" type="text/javascript"></script>
+	<script src="../js/app.js" type="text/javascript"></script>
+    <script src="../js/views.js" type="text/javascript"></script>
     <script src="../js/services/httpConstants.js" type="text/javascript"></script>    
     <script src="../js/services/signalr.hubs.js" type="text/javascript"></script>	
     <script src="../js/services/notificationservice.js" type="text/javascript"></script>
