--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -1,19 +1,21 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>tUdUs</title>
+    <title>tUdUs</title>
 
-	<meta charset="utf-8">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
 	
-	<link rel="apple-touch-icon" href="../images/Wooden_Todo_128x128.png" />
-	<link rel="apple-touch-startup-image" href="../images/splash.png" media="screen and (max-device-width: 320px)" />
+    <link rel="apple-touch-icon" href="../images/Wooden_Todo_128x128.png" />
+    <link rel="apple-touch-startup-image" href="../images/splash.png" media="screen and (max-device-width: 320px)" />
 	
-	<link href="../styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
     <link href="../styles/kendo.dataviz.min.css" rel="stylesheet" type="text/css" />
-	<link href="../styles/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/app.min.css" rel="stylesheet" type="text/css" />
     <link href="../styles/jquery_notification.css" rel="stylesheet" type="text/css" />
+    
+    <!--<script data-main="../js/app" src="../js/libs/require.js"></script>-->
 
 	<script src="../js/libs/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
