--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -12,7 +12,7 @@
 	
     <link href="../styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
     <link href="../styles/kendo.dataviz.min.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/app.css" rel="stylesheet" type="text/css" />
     <link href="../styles/jquery_notification.css" rel="stylesheet" type="text/css" />
     
     <!--<script data-main="../js/app" src="../js/libs/require.js"></script>-->
