Added icons.less and re-enabled original icons functionality in Kendo

--- a/TodoWebApp/www/styles/app.css
+++ b/TodoWebApp/www/styles/app.css
@@ -2,6 +2,12 @@ div {
     -webkit-transform: translateZ(0);
 }
 
+/* Remove font icons styling, use .km- + data-icon name if only one should be overridden */
+.km-root .km-pane .km-view .km-icon {
+    background-size: 100% 100%;
+    -webkit-background-clip: border-box;
+}
+
 #preLoad {
     width: 100%;
     height: 100%;
