Added LESS and PNG from previous Kendo build

--- a/TodoWebApp/www/styles/app.css
+++ b/TodoWebApp/www/styles/app.css
@@ -8,6 +8,11 @@ div {
     -webkit-background-clip: border-box;
 }
 
+.km-icon:before
+{
+    display: none !important;
+}
+
 #preLoad {
     width: 100%;
     height: 100%;
