--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -20,6 +20,7 @@
 
 	<script src="../js/libs/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
+    <script src="../js/libs/jquery.ba-tinypubsub.min.js" type="text/javascript"></script>
     <script src="../js/libs/log4javascript.js" type="text/javascript"></script>
     <script>
         if (navigator.userAgent.toLowerCase().match(/android/)) {
