--- a/TodoWebApp/www/views/stats.html
+++ b/TodoWebApp/www/views/stats.html
@@ -5,14 +5,14 @@
 </head>
 <body>
     <!-- Stats page -->
-    <div id="statsPage" data-role="view" data-title="tUdUs" data-init="todosApp.Views.graphInit" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
+    <div id="statsPage" data-role="view" data-title="tUdUs" data-init="todosApp.Views.graphInit" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout" data-stretch="true">
         <header data-role="header">
             <div data-role="navbar">
                 <span data-role="view-title"></span>
             </div>
         </header>
         
-        <h2>Statistics</h2>
+<!--        <h2>Statistics</h2>-->
 
         <div id="chart"> </div>
     </div>
