--- a/TodoWebApp/www/views/items.html
+++ b/TodoWebApp/www/views/items.html
@@ -17,7 +17,7 @@
 		
 	    <h2>Items</h2>
 				
-	    <ul id="tasksList" data-role="listview" data-style="inset" data-bind="source: todosSource" data-template="tasksListTemplate" >
+	    <ul id="tasksList" data-role="listview" data-style="inset" data-bind="source: todosSource" data-pull-to-refresh="true" data-template="tasksListTemplate" >
 	    </ul>
     </div>
 
