Updated plist and app version

--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -100,7 +100,7 @@
                 <div data-role="tabstrip" id="navigationTabStrip">
                     <a data-icon="home" href="index.html">Home</a>
                     <a data-icon="bookmarks" href="items.html">Items</a>
-                    <a data-icon="globe" href="gallery.html">Gallery</a>
+                    <!--<a data-icon="globe" href="gallery.html">Gallery</a>-->
                     <a data-icon="recents" href="stats.html">Stats</a>
                     <a data-icon="settings" href="settings.html">Settings</a>
                     <a data-icon="info" href="info.html">Info</a>
