Added simple Web API test client

--- a/TodoWebApp/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/TodoWebApp/Areas/HelpPage/Views/Help/Api.cshtml
@@ -20,6 +20,9 @@
     </section>
 </div>
 
+@Html.DisplayForModel("TestClientDialogs")
+
 @section Scripts {
     <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
+    @Html.DisplayForModel("TestClientReferences")
 }
