--- a/TodoWebApp/www/templates/tasksList.tmpl.html
+++ b/TodoWebApp/www/templates/tasksList.tmpl.html
@@ -1,10 +1,10 @@
 <script id="tasksListTemplate" type="text/x-kendo-template">
     # if (typeof isAdded !== 'undefined') { #
         # if (isAdded) { #
-            <a class="details-link" style="color: darkred; font-style: italic;" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">#= title#</a>
+            <a class="details-link" data-enable-swipe="1" data-swipe="todosApp.Views.swiped" style="color: darkred; font-style: italic;" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">#= title#</a>
             # } #
         # } else { #
-            <a class="details-link" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">#= title#</a>
+            <a class="details-link" data-enable-swipe="1" data-swipe="todosApp.Views.swiped" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">#= title#</a>
             # } #
     
     <a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
