--- a/TodoWebApp/www/templates/idpList.tmpl.html
+++ b/TodoWebApp/www/templates/idpList.tmpl.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <script id="idpListTemplate" type="text/x-kendo-template">
     <img src="${imageUrl}" style="border: 50px; width: 60px" align="middle"/>
     <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
