--- a/TodoWebApp/www/templates/tasksList.tmpl.html
+++ b/TodoWebApp/www/templates/tasksList.tmpl.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <script id="tasksListTemplate" type="text/x-kendo-template">
     # if (typeof isAdded !== 'undefined') { #
         # if (isAdded) { #
