--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -14,7 +14,10 @@
     <link href="../styles/kendo.dataviz.min.css" rel="stylesheet" type="text/css" />
     <link href="../styles/app.css" rel="stylesheet" type="text/css" />
     <link href="../styles/jquery_notification.css" rel="stylesheet" type="text/css" />
-    
+
+   <!-- <script src="http://jsconsole.com/remote.js?34F9BD91-77FA-4450-A277-8430475C67A9"></script>
+   -->
+
     <script src="../js/libs/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
     <script src="../js/libs/jquery.ba-tinypubsub.min.js" type="text/javascript"></script>
@@ -39,9 +42,10 @@
 	<script src="../js/libs/jquery.signalR-1.0.0-alpha2.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
+
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
 
-	<script src="../js/namespaces.js" type="text/javascript"></script>
+    <script src="../js/namespaces.js" type="text/javascript"></script>
     <script src="../js/config.js" type="text/javascript"></script>
     <script src="../js/tools/helpers.js" type="text/javascript"></script>
     <script src="../js/applicationConstants.js" type="text/javascript"></script>
