--- a/TodoWebApp/app/views/index.html
+++ b/TodoWebApp/app/views/index.html
@@ -17,7 +17,7 @@
     <title>tUdUs</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h2>tUdUs</h2>
         <div class="container">
             <div ng-view></div>
