--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -39,7 +39,7 @@
     <script src="../js/libs/kendo.mobile.min.js" type="text/javascript"></script>    
     <script src="../js/libs/amplify.min.js" type="text/javascript"></script>
 	<script src="../js/libs/notifier.min.js" type="text/javascript"></script>
-	<script src="../js/libs/jquery.signalR-1.0.0-rc2.min.js" type="text/javascript"></script>
+	<script src="../js/libs/jquery.signalR-1.0.1.min.js" type="text/javascript"></script>
     <script src="../js/libs/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
 
