Fix for including cordova.js, some perf optimization

--- a/TodoWebApp/www/views/items.html
+++ b/TodoWebApp/www/views/items.html
@@ -22,7 +22,7 @@
     </div>
     
     <!-- tUdU details page -->
-    <div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-show="todosApp.Views.todoDetailsShow" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
+    <div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-show="todosApp.Views.todoDetailsShow" data-after-show="todosApp.Views.todoDetailsAfterShow" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<a data-role="backbutton" data-align="left">Back</a>
