--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -19,17 +19,7 @@
     <script src="../js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
     <script src="../js/libs/jquery.ba-tinypubsub.min.js" type="text/javascript"></script>
     <script src="../js/libs/log4javascript.js" type="text/javascript"></script>
-    <script>
-        if (navigator.userAgent.toLowerCase().match(/android/)) {
-            document.write('<script charset="utf-8" src="../js/libs/cordova-android.js"><\/script>');
-        }
-        else if (navigator.userAgent.toLowerCase().match(/iphone/) || navigator.userAgent.toLowerCase().match(/ipad/)) {
-            document.write('<script charset="utf-8" src="../js/libs/cordova-ios.js"><\/script>');
-        } else {
-            document.write('<script charset="utf-8" src="../js/libs/cordova.js"><\/script>');
-        }
-    </script>
-    <script src="../js/libs/childbrowser.js" type="text/javascript"></script>
+    
     <script src="../js/libs/underscore-min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery.base64.min.js" type="text/javascript"></script>
 	<script src="../js/libs/kendo.dataviz.min.js" type="text/javascript"></script>
@@ -45,6 +35,23 @@
     <script src="../js/namespaces.js" type="text/javascript"></script>
     <script src="../js/config.js" type="text/javascript"></script>
     <script src="../js/tools/helpers.js" type="text/javascript"></script>
+        
+        <script>
+            if (ttTools.isInApp()) {
+                document.write('<script src="../js/libs/childbrowser.js" type="text/javascript"><\/script>');
+        
+                if (navigator.userAgent.toLowerCase().match(/android/)) {
+                    document.write('<script charset="utf-8" src="../js/libs/cordova-android.js"><\/script>');
+                }
+                else if (navigator.userAgent.toLowerCase().match(/iphone/) || navigator.userAgent.toLowerCase().match(/ipad/)) {
+                    document.write('<script charset="utf-8" src="../js/libs/cordova-ios.js"><\/script>');
+                } else {
+                    document.write('<script charset="utf-8" src="../js/libs/cordova.js"><\/script>');
+                }
+            }
+        </script>
+    
+        
     <script src="../js/applicationConstants.js" type="text/javascript"></script>
 	<script src="../js/tools/templateLoader.js" type="text/javascript"></script>
 	<script src="../js/tools/jsonAppender.js" type="text/javascript"></script>
