--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -37,9 +37,9 @@
     <script src="../js/tools/helpers.js" type="text/javascript"></script>
         
         <script>
-            if (ttTools.isInApp()) {
+            if (navigator.userAgent.toLowerCase().match(/(iphone|ipod|ipad|android|blackberry)/)) {
                 document.write('<script src="../js/libs/childbrowser.js" type="text/javascript"><\/script>');
-        
+                
                 if (navigator.userAgent.toLowerCase().match(/android/)) {
                     document.write('<script charset="utf-8" src="../js/libs/cordova-android.js"><\/script>');
                 }
