--- a/TodoWebApp/www/styles/app.css
+++ b/TodoWebApp/www/styles/app.css
@@ -13,6 +13,11 @@ div {
     font-size: 1.5rem;
 }
 
+.km-wp .km-tabstrip .km-button
+{
+    margin: 0 1em;
+}
+
 #gallery .photo {
     width: 320px;
     margin: 0;
