--- a/TodoWebApp/jqm/views/index.html
+++ b/TodoWebApp/jqm/views/index.html
@@ -7,6 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css"/>
         <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+        
+        <script>
+        $(document).bind("mobileinit", function(){
+            $.mobile.defaultPageTransition = 'none';
+        })
+        </script>
+
         <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
@@ -14,6 +21,8 @@
         <script src="../../www/js/libs/jquery.base64.min.js"></script>
         <script src="../js/services.js"></script>
         <script src="../js/controllers.js"></script>
+
+
     </head>
 
 <body ng-controller="TodoController">
