--- a/TodoWebApp/jqm/views/index.html
+++ b/TodoWebApp/jqm/views/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
-<html ng-app="TodoService">
-    <head>
-        <title>tUduS</title>
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css"/>
-        <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-        
-        <script>
-        $(document).bind("mobileinit", function(){
-            $.mobile.defaultPageTransition = 'none';
+<html ng-app="todoApp">
+<head>
+    <title>tUduS</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+
+    <script>
+        $(document).bind("mobileinit", function () {
+            //$.mobile.defaultPageTransition = 'none';
         })
-        </script>
+    </script>
 
-        <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
-        <script src="http://underscorejs.org/underscore-min.js"></script>
-        <script src="../../www/js/libs/jquery.base64.min.js"></script>
-        <script src="../js/services.js"></script>
-        <script src="../js/controllers.js"></script>
+    <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
+    <script src="http://underscorejs.org/underscore-min.js"></script>
+    <script src="../../www/js/libs/jquery.base64.min.js"></script>
 
-
-    </head>
+    <script src="../js/app.js"></script>
+    <script src="../js/sharedServices.js"></script>
+    <script src="../js/todoService.js"></script>
+    <script src="../js/controllers.js"></script>
+</head>
 
 <body ng-controller="TodoController">
-<!--Todo List Page-->
+    <!--Todo List Page-->
     <div id="todo-list" data-role="page">
         <div data-role="header">
             <h1>tUdUs</h1>
@@ -44,37 +45,37 @@
         </div>
     </div>
 
-<!--Todo Detail Page-->
-<div id="todo-detail" data-role="page">
-    <div data-role="header">
-        <a href="#" data-icon="back" data-rel="back">Back</a>
+    <!--Todo Detail Page-->
+    <div id="todo-detail" data-role="page">
+        <div data-role="header">
+            <a href="#" data-icon="back" data-rel="back">Back</a>
 
-        <h1>{{todo.title}}</h1>
-        <a href="#todo-list" ng-click="saveTodo()" data-icon="check" class="ui-btn-right">Save</a>
+            <h1>{{todo.title}}</h1>
+            <a href="#todo-list" ng-click="saveTodo()" data-icon="check" class="ui-btn-right">Save</a>
+        </div>
+        <div data-role="content">
+            <ul data-role="listview" data-inset="true">
+                <li data-role="fieldcontain">
+                    <label for="description">Description</label>
+                    <input id="description" type="text" ng-model="todo.title" />
+                </li>
+                <li data-role="fieldcontain">
+                    <label for="details">Details</label>
+                    <textarea id="details" cols="40" rows="8" ng-model="todo.details"></textarea>
+                </li>
+
+                <li data-role="fieldcontain">
+                    <label for="createddate">Created</label>
+                    <input id="createddate" type="date" ng-model="todo.created" />
+                </li>
+            </ul>
+            <button data-inline="true" onclick="$.mobile.changePage('#todo-list')" ng-click="completeTodo(todo.id)">
+                Complete Task
+            </button>
+        </div>
+        <div data-role="footer" data-position="fixed">
+            <p>Task ID: {{todo.id}}</p>
+        </div>
     </div>
-    <div data-role="content">
-        <ul data-role="listview" data-inset="true">
-            <li data-role="fieldcontain">
-                <label for="description">Description</label>
-                <input id="description" type="text" ng-model="todo.title"/>
-            </li>
-            <li data-role="fieldcontain">
-                <label for="details">Details</label>
-                <textarea id="details" cols="40" rows="8" ng-model="todo.details"></textarea>
-            </li>
-           
-            <li data-role="fieldcontain">
-                <label for="createddate">Created</label>
-                <input id="createddate" type="date" ng-model="todo.created"/>
-            </li>
-        </ul>
-        <button data-inline="true" onclick="$.mobile.changePage('#todo-list')" ng-click="completeTodo(todo.id)">
-            Complete Task
-        </button>
-    </div>
-    <div data-role="footer" data-position="fixed">
-        <p>Task ID: {{todo.id}}</p>
-    </div>
-</div>
 </body>
 </html>
