--- a/TodoWebApp/www/views/index.html
+++ b/TodoWebApp/www/views/index.html
@@ -27,7 +27,7 @@
     <script src="../js/libs/amplify.min.js" type="text/javascript"></script>
 	<script src="../js/libs/notifier.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery.signalR-1.1.0.min.js" type="text/javascript"></script>
-    <script src="../js/libs/jquery.ba-bbq.min.js" type="text/javascript"></script>
+    <script src="../js/libs/jquery.ba-bbq_patched.min.js" type="text/javascript"></script>
 	<script src="../js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
         
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
